fix: romper dependencia circular